--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-element-to-jsx-string": "^17.0.1",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.0"
   },
