--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-label": "^2.1.7",
+    "@splinetool/react-spline": "^4.0.0",
     "@tabler/icons-react": "^3.33.0",
     "@tailwindcss/cli": "^4.1.7",
     "@tsparticles/engine": "^3.8.1",
