--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.0",
     "motion": "^12.12.2",
     "next": "15.3.2",
     "react": "^19.0.0",
