--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.0",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.525.0",
     "motion": "^12.12.2",
     "next": "15.3.2",
     "react": "^19.0.0",
